--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-htmlinline",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "inline script and link for html",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,8 @@
     "eventproxy": "^0.3.1",
     "gulp-util": "^2.2.17",
     "request": "^2.36.0",
-    "through2": "^0.5.1"
+    "through2": "^0.5.1",
+    "uglify-js": "^2.4.15",
+    "clean-css": "~2.2.13"
   }
 }
